4.Kubernetes_introduction.p3/homework_step_by_step/step_13/ingress-2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: s<номер_студента>.k8s.slurm.io
    http:
      paths:
      - path: /app(/secret/password)
        backend:
          serviceName: app-secret
          servicePort: 80
